--- a/main.css
+++ b/main.css
@@ -234,7 +234,7 @@ footer {
     text-align: center;
 }
 
-@media only screen and (max-width: 1412px) and (min-width: 415px) {
+@media only screen and (max-width: 1412px) and (min-width: 498px) {
     #banner {
         padding-top: 150px;
     }
@@ -244,7 +244,7 @@ footer {
         font-weight: bold;
         line-height: 25px;
         padding-left: 30px;
-        padding-top: 50px;
+        margin-top: -800px;
         text-align: center;
     }
 
@@ -258,9 +258,7 @@ footer {
     }
 
 
-    #sports {
-        display: none;
-    }
+    #sports {}
 
     #nav_menu {
         display: none;
@@ -297,13 +295,10 @@ footer {
     #subheader {
         font-size: 10px;
     }
-    .powr-mailing-list {
-        display: none;
-    }
 }
 
 
-@media only screen and (max-width: 415px) and (min-width:351px) {
+@media only screen and (max-width: 498px) and (min-width:351px) {
 
     html {
         background-image: url(images/header-rotated.jpg);
@@ -330,10 +325,11 @@ footer {
     #subheader {
         font-size: 9px;
     }
-    
+
     #sports {
         display: none;
     }
+
     .powr-mailing-list {
         display: none;
     }
@@ -345,6 +341,7 @@ footer {
         background-size: contain;
 
     }
+
     .powr-mailing-list {
         display: none;
     }
@@ -356,7 +353,8 @@ footer {
     #subheader {
         font-size: 8px;
     }
-     #sports {
+
+    #sports {
         display: none;
     }
 }
@@ -367,6 +365,7 @@ footer {
         background-size: contain;
 
     }
+
     .powr-mailing-list {
         display: none;
     }
@@ -378,7 +377,8 @@ footer {
     #subheader {
         font-size: 7px;
     }
-     #sports {
+
+    #sports {
         display: none;
     }
 }
