--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ html {
     background-image: url(images/header.jpg);
     background-position: center 30%;
     background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
     width: 100vw;
 
@@ -75,6 +76,7 @@ header {
 
 
 #title {
+    display: flex;
     width: 100vw;
     font-family: 'Cedarville Cursive', cursive;
     font-weight: 100;
@@ -277,8 +279,9 @@ footer {
 
 }
 
+
 /* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) and (orientation: landscape) {
+@media only screen and (max-width : 321px) and (orientation: landscape) {
 
     /* Styles */
     html {
@@ -299,7 +302,7 @@ footer {
     #banner {
         font-size: 75%;
         margin-top: -40px;
-        display: none
+        display: none;
     }
 }
 
@@ -350,7 +353,7 @@ footer {
 }
 
 /* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+@media only screen and (min-device-width : 823px) and (orientation : landscape) {
 
     /* Styles */
     #sports {
@@ -360,7 +363,6 @@ footer {
     #banner {
         display: block;
         text-align: center;
-        margin-top: 100px;
     }
 
 }
@@ -390,17 +392,6 @@ footer {
     #banner_bogo {
         margin-top: -500px;
     }
-}
-
-/**********
-iPad 3
-**********/
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
-    /* Styles */
-}
-
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
-    /* Styles */
 }
 
 /* Desktops and laptops ----------- */
@@ -435,7 +426,7 @@ iPad 3
     }
 
     #nav_menu {
-        display: none;
+        display: block;
     }
 
     #mobilemenu {
@@ -443,10 +434,7 @@ iPad 3
     }
 
     .slicknav_menu {
-        text-align: left;
-        display: block;
-        float: left;
-        width: 100%;
+        display: none;
     }
 
     .slicknav_nav a {
@@ -464,6 +452,7 @@ iPad 3
 
     #title {
         font-size: 26px;
+        display: flex;
     }
 
     #subheader {
@@ -471,19 +460,6 @@ iPad 3
     }
 }
 
-/* Large screens ----------- */
-@media only screen and (min-width : 1824px) {
-    /* Styles */
-}
-
-/* iPhone 4 ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
-    /* Styles */
-}
-
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
-    /* Styles */
-}
 
 /* iPhone 5 ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
@@ -592,12 +568,6 @@ iPad 3
 
 }
 
-/* iPhone 6+, 7+, 8+ ----------- */
-@media only screen and (min-device-width: 411px) and (max-device-height: 893px) and (orientation :landscape) and (-webkit-device-pixel-ratio: 2) {
-
-    /* Styles */
-
-}
 
 @media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
 
@@ -641,39 +611,5 @@ iPad 3
     }
 }
 
-/* iPhone XS Max, XR ----------- */
-@media only screen and (min-device-width: 412px) and (max-device-height: 896px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3) {
-    /* Styles */
-   
-}
 
-@media only screen and (min-device-width: 414px) and (max-device-height: 896px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3) {
-    /* Styles */
-}
 
-/* Samsung Galaxy S3 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
-    /* Styles */
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
-    /* Styles */
-}
-
-/* Samsung Galaxy S4 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3) {
-    /* Styles */
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3) {
-    /* Styles */
-}
-
-/* Samsung Galaxy S5 ----------- */
-@media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3) {
-    /* Styles */
-}
-
-@media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3) {
-    /* Styles */
-}
