--- a/main.css
+++ b/main.css
@@ -98,14 +98,13 @@ header {
 
 
 #title h1 {
-    opacity: 0.5;
     font-weight: lighter;
-    background: #222 -webkit-gradient(linear, left top, right top, from(#222), to(#222), color-stop(0.5, #fff)) 0 0 no-repeat;
+    background: #fccccc -webkit-gradient(linear, left top, right top, from(#bebebe), to(#bebebe), color-stop(0.5, #fff)) 0 0 no-repeat;
     -webkit-background-size: 150px;
     color: rgba(255, 255, 255, 0);
     -webkit-background-clip: text;
     -webkit-animation-name: shine;
-    -webkit-animation-duration: 6s;
+    -webkit-animation-duration: 4s;
     -webkit-animation-iteration-count: infinite;
     text-shadow: 0 0px 0px rgba(255, 255, 255, 0.5);
 }
@@ -114,7 +113,7 @@ header {
 
     0%,
     10% {
-        background-position: -100px;
+        background-position: -50px;
     }
 
     20% {
@@ -126,7 +125,7 @@ header {
     }
 
     100% {
-        background-position: 700px;
+        background-position: 250px;
     }
 }
 
@@ -181,28 +180,34 @@ header {
 }
 
 #banner {
+    display: flex;
     /*    background-image: url(christmas.jpg);*/
-    background-size: cover;
+    /*    background-size: cover;*/
     /* <------ */
+    /*
     background-repeat: no-repeat;
     background-position: center 30%;
-    height: 350px;
-    margin-top: -4px;
+*/
+    height: auto;
+    margin-top: 2vh;
 }
 
 #banner_bogo {
     color: white;
     font-weight: bold;
     line-height: 25px;
-    padding-top: 50px;
     text-align: center;
+    justify-content: center;
+    display: inline-flex;
+    width: 100vw;
 }
 
 #banner_shop {
     color: white;
-    margin: 20px;
-    padding-top: 10px;
+    margin-top: 5px;
     text-align: center;
+    display: inline-flex;
+    width: 100vw;
 
 }
 
@@ -259,7 +264,7 @@ footer {
     }
 
     #subheader {
-        font-size: 7px;
+        font-size: 65%;
     }
 
     #sports {
@@ -276,12 +281,19 @@ footer {
     #nav_menu {
         display: none;
     }
+    #banner_shop {
+        width: 100vw;
+    }
+    
+    #banner_bogo {
+        width: 100vw;
+    }
 
 }
 
 
 /* Smartphones (landscape) ----------- */
-@media only screen and (max-width : 321px) and (orientation: landscape) {
+@media only screen and (max-width : 740px) and (orientation: landscape) {
 
     /* Styles */
     html {
@@ -294,20 +306,25 @@ footer {
     #sports {
         display: none;
     }
-    
+
     .powr-mailing-list {
         display: none;
     }
-
-    #banner {
+    #banner_shop {
+        width: 100vw;
+    }
+    #banner_bogo {
+        width: 100vw;
         font-size: 75%;
-        margin-top: -40px;
-        display: none;
+    }
+    
+    #subheader a {
+        font-size: 80%;
     }
 }
 
 /* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 320px) {
+@media only screen and (max-width : 321px) {
 
     /* Styles */
     html {
@@ -326,7 +343,7 @@ footer {
     }
 
     #subheader {
-        font-size: 8px;
+        font-size: 50%;
     }
 
     #sports {
@@ -343,13 +360,26 @@ footer {
     #nav_menu {
         display: none;
     }
+    #banner_shop {
+        width: 100vw;
+    }
+    #banner_bogo {
+        width: 100vw;
+    }
 }
 
 /* iPads (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
 
     /* Styles */
-   
+    #banner_shop {
+        
+        width: 100vw;
+    }
+    #banner_bogo {
+        width: 100vw;
+    }
+
 }
 
 /* iPads (landscape) ----------- */
@@ -369,12 +399,13 @@ footer {
 
 /* iPads (portrait) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+
     /* Styles */
-     html {
+    html {
         background: rgb(48, 48, 48);
         background-image: url(images/header.jpg);
         background-size: cover;
-        background-position: center 30%;
+        background-position: center;
         background-repeat: no-repeat;
         height: 100vh;
         width: 100vw;
@@ -382,115 +413,20 @@ footer {
     }
 
     #banner_bogo {
-        margin-top: -250px;
+        margin-top: -280px;
     }
 }
 
 @media only screen and (min-device-width : 1024px) and (max-device-width : 1366px) and (orientation : portrait) {
 
-    /* Styles */
+     Styles 
     #banner_bogo {
         margin-top: -500px;
     }
 }
 
-/* Desktops and laptops ----------- */
-@media only screen and (min-width : 1224px) {
 
 
-    #banner {
-        padding-top: 150px;
-    }
-
-    #banner_bogo {
-        color: white;
-        font-weight: bold;
-        line-height: 25px;
-        padding-left: 30px;
-        margin-top: -800px;
-        text-align: center;
-    }
-
-    #banner_shop {
-        color: white;
-        margin: 20px;
-        padding-top: 10px;
-        padding-left: 10px;
-        text-align: center;
-
-    }
-
-
-    #sports {
-        display: block;
-    }
-
-    #nav_menu {
-        display: block;
-    }
-
-    #mobilemenu {
-        height: 59px;
-    }
-
-    .slicknav_menu {
-        display: none;
-    }
-
-    .slicknav_nav a {
-        text-align: left;
-        display: inline-block;
-    }
-
-    .slicknav_nav li {
-        text-align: center;
-    }
-
-    #banner {
-        margin-top: 0px;
-    }
-
-    #title {
-        font-size: 26px;
-        display: flex;
-    }
-
-    #subheader {
-        font-size: 10px;
-    }
-}
-
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
-
-    /* Styles */
-    html {
-        background: rgb(48, 48, 48);
-        background-image: url(images/header.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        width: 100vw;
-
-    }
-
-    #banner {
-        font-size: 40%;
-        margin-top: -50px;
-    }
-
-    #banner_shop {
-        margin-top: -0.02px;
-    }
-
-    #subheader a {
-        font-size: 75%;
-    }
-
-    #title {
-        display: flex;
-    }
-}
 
 @media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
 
@@ -509,7 +445,20 @@ footer {
 }
 
 
+/* iPhone 5 ----------- */
+@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
 
+
+
+    #banner {
+        font-size: 80%;
+        text-align: center;
+    }
+
+    #title {
+        display: flex;
+    }
+}
 
 /* iPhone 6, 7, 8 ----------- */
 @media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
@@ -548,16 +497,8 @@ footer {
     .powr-mailing-list {
         display: none;
     }
-
-    #banner {
-        font-size: 100%;
-        margin-top: 5px;
-    }
-
-    #banner_shop {
-        margin-top: 5px;
-    }
 }
+
 
 @media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
 
@@ -587,19 +528,15 @@ footer {
         display: none;
     }
 
-    #banner_bogo {
-        display: flex;
-        padding-left: 38vw;
-    }
-
-    #banner_shop {
-        display: flex;
-        margin-top: -10px;
-    }
-
-    #banner {
+    #sports {
         display: none;
-        margin-top: 200px;
+    }
+    
+    #banner_shop {
+        width: 100vw;
+    }
+    #banner_bogo {
+        width: 100vw;
     }
 }
 
@@ -610,6 +547,52 @@ footer {
         font-size: 70%;
     }
 }
+/* Desktops and laptops ----------- */
+@media only screen and (min-width : 1224px) {
+    
+    #banner_shop {
+        
+        width: 100vw;
+    }
+    
+    #banner_bogo {
+        width: 100vw;
+    }
+    
 
+    #sports {
+        display: inline-block;
+    }
+
+    #nav_menu {
+        display: block;
+    }
+
+    #mobilemenu {
+        height: 59px;
+    }
+
+    .slicknav_menu {
+        display: none;
+    }
+
+    .slicknav_nav a {
+        text-align: left;
+        display: inline-block;
+    }
+
+    .slicknav_nav li {
+        text-align: center;
+    }
+
+    #title {
+        font-size: 40px;
+        display: flex;
+    }
+
+    #subheader {
+        font-size: 10px;
+    }
+}
 
 
