--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -247,7 +247,7 @@ footer {
 
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 490px) {
+@media only screen and (min-width : 320px) and (max-width : 490px) {
 
     /* Styles */
     html {
@@ -390,7 +390,7 @@ footer {
 }
 
 /* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1025px) {
+@media only screen and (min-width : 768px) and (max-width : 1025px) {
 
     /* Styles */
 
@@ -412,7 +412,7 @@ footer {
 
 
 /* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 824px) and (orientation : landscape) {
+@media only screen and (min-width : 824px) and (orientation : landscape) {
 
     /* Styles */
 
@@ -436,7 +436,7 @@ footer {
 
 
 /* iPads (portrait) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1286px) and (orientation : portrait) {
+@media only screen and (min-width : 768px) and (max-width : 1286px) and (orientation : portrait) {
 
     /* Styles */
     html {
@@ -467,7 +467,7 @@ footer {
 }
 
 /*
-@media only screen and (min-device-width : 1024px) and (max-device-width : 1366px) and (orientation : portrait) {
+@media only screen and (min-width : 1024px) and (max-width : 1366px) and (orientation : portrait) {
 
     Styles #banner_bogo {
         margin-top: -500px;
@@ -478,7 +478,7 @@ footer {
 */
 
 
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
+@media only screen and (min-width: 320px) and (max-height: 568px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
 
     /* Styles */
     html {
@@ -496,7 +496,7 @@ footer {
 
 
 /* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
+@media only screen and (min-width: 320px) and (max-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
 
 
 
@@ -511,7 +511,7 @@ footer {
 }
 
 /* iPhone 6, 7, 8 ----------- */
-@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
+@media only screen and (min-width: 375px) and (max-height: 667px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2) {
 
     /* Styles */
     html {
@@ -550,7 +550,7 @@ footer {
 }
 
 
-@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
+@media only screen and (min-width: 375px) and (max-height: 667px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
 
     /* Styles */
     #subheader {
@@ -560,7 +560,7 @@ footer {
 }
 
 
-@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
+@media only screen and (min-width: 414px) and (max-height: 736px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2) {
 
     /* Styles */
     .powr-mailing-list {
@@ -571,7 +571,7 @@ footer {
 }
 
 /* iPhone X ----------- */
-@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3) {
+@media only screen and (min-width: 375px) and (max-height: 812px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3) {
 
     /* Styles */
     html {
@@ -603,7 +603,7 @@ footer {
     }
 }
 
-@media only screen and (min-device-width: 375px) and (max-device-height: 812px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3) {
+@media only screen and (min-width: 375px) and (max-height: 812px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3) {
 
     /* Styles */
     #subheader {
